加强量子计算机 为OMNI合成单元添加tooltip 不对合成锁定的供应器进行翻倍